[DPEDE-7139] Fix button and the search input alignment

--- a/src/chi/components/buttons/buttons.scss
+++ b/src/chi/components/buttons/buttons.scss
@@ -106,7 +106,6 @@ $sizes: (
   &__content {
     align-items: center;
     display: inline-flex;
-    gap: 0.5rem;
     justify-content: center;
     width: 100%;
   }
